--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "nodemon ./bin/www"
   },
   "dependencies": {
+    "async": "^3.1.0",
+    "await": "^0.2.6",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv-safe": "^8.2.0",
     "express": "~4.16.1",
     "express-jwt": "^5.3.1",
-    "hbs": "~4.0.4",
+    "hbs": "^4.1.0",
     "http-errors": "~1.6.3",
     "md5": "^2.2.1",
     "mongoose": "^5.8.7",
