--- a/.env
+++ b/.env
@@ -2,5 +2,4 @@
 SECRET = u*yRsDL,v>C/h@jz#7drb&uuzBs&R/ju?{[wepY]\{'%tyV!F4gsmRP,BW,$CFB4YUKePq8K84U2U}BW,$CFB4YUKePqzBs&R/ju?{[w.x3b7<gbFg*t9,/`r..BWV
 
 # DB
-userDB = admin
-passwordDB = admin123
+urlDataBase = mongodb://admin:admin123@ds263928.mlab.com:63928/br-micro-service-dns
