--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "nodemon ./bin/www"
+    "nodemon": "nodemon ./bin/www"
   },
   "dependencies": {
     "async": "^3.1.0",
@@ -15,10 +15,11 @@
     "dotenv-safe": "^8.2.0",
     "express": "~4.16.1",
     "express-jwt": "^5.3.1",
-    "hbs": "^4.1.0",
+    "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "md5": "^2.2.1",
     "mongoose": "^5.8.7",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "swagger-ui-express": "^4.1.4"
   }
 }
