--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "async": "^3.1.0",
     "await": "^0.2.6",
+    "body-parser": "^1.19.0",
     "circular-json": "^0.5.9",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
